fixed position mobile nav

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -11,19 +11,16 @@ nav.nav {
   padding: 0 1em;
 
   // expanded nav attribution covers entire screen for mobile
-  // this one is the parent element
-  &.nav--mobile--expanded {
-    position: relative;
-  }
-  
   &.nav--mobile--expanded div.nav__box {
     flex-direction: column;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     gap: 1.75em;
+
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     
-    margin: 50vh auto 0;
-    transform: translateY(-50%);
     width: 100vw;
     height: 100vh;
     z-index: -1;
